--- a/Projet/ethique.ipynb
+++ b/Projet/ethique.ipynb
@@ -21,12 +21,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. [Situation initiale](#1-Situation-initiale)\n",
-    "2. [Solutions](#2-solutions)\n",
-    "3. [Parties prenantes](#3-Parties-prenantes)\n",
-    "4. [Impacts](#4-Impacts)\n",
-    "5. [Filtre éthique](#5-Filtre-éthique)\n",
-    "6. [Glossaire](#6-Glossaire)"
+    "1. [Situation initiale](#1.-Situation-initiale)\n",
+    "2. [Solutions](#2.-solutions)\n",
+    "3. [Parties prenantes](#3.-Parties-prenantes)\n",
+    "4. [Impacts](#4.-Impacts)\n",
+    "5. [Filtre éthique](#5.-Filtre-éthique)\n",
+    "6. [Glossaire](#6.-Glossaire)"
    ]
   },
   {
