maj: Clean document

--- a/Projet/pipeline.ipynb
+++ b/Projet/pipeline.ipynb
@@ -59,7 +59,7 @@
     "EMPLOYEE_SURVEY_DATA_PATH = \"./data/employee_survey_data.csv\"\n",
     "MANAGER_SURVEY_DATA_PATH = \"./data/manager_survey_data.csv\"\n",
     "IN_TIME_DATA_PATH = \"./data/in_out_time/in_time.csv\"\n",
-    "OUT_TIME_DATA_PATH = \"./data/in_out_time/out_time.csv\"\n"
+    "OUT_TIME_DATA_PATH = \"./data/in_out_time/out_time.csv\""
    ]
   },
   {
@@ -142,7 +142,7 @@
     "    # Add column EmployeeID\n",
     "    df = df.to_frame().reset_index()\n",
     "    df.columns = [\"EmployeeID\", \"AvgTime\"]\n",
-    "    return df\n"
+    "    return df"
    ]
   },
   {
@@ -182,7 +182,7 @@
     "    avg_work_time_per_employee,\n",
     "    on=\"EmployeeID\",\n",
     "    how=\"outer\"\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -478,7 +478,7 @@
    ],
    "source": [
     "# Display a random sample of 5 rows\n",
-    "df_total.sample(5)\n"
+    "df_total.sample(5)"
    ]
   },
   {
@@ -486,7 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prétraitement des données\n"
+    "## Prétraitement des données d'entrainement\n"
    ]
   },
   {
@@ -502,7 +502,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Nettoyage des données\n"
+    "### Nettoyage des données ethiques et inutiles\n"
    ]
   },
   {
@@ -559,7 +559,7 @@
     "\n",
     "# Delete to free memory\n",
     "del fields_not_useful\n",
-    "del fields_not_ethical\n"
+    "del fields_not_ethical"
    ]
   },
   {
@@ -598,7 +598,7 @@
     "X_useful_train_set.drop([\"Attrition\", \"EmployeeID\"], axis=1, inplace=True)\n",
     "X_useful_test_set.drop([\"Attrition\", \"EmployeeID\"], axis=1, inplace=True)\n",
     "X_ethical_train_set.drop([\"Attrition\", \"EmployeeID\"], axis=1, inplace=True)\n",
-    "X_ethical_test_set.drop([\"Attrition\", \"EmployeeID\"], axis=1, inplace=True)\n"
+    "X_ethical_test_set.drop([\"Attrition\", \"EmployeeID\"], axis=1, inplace=True)"
    ]
   },
   {
@@ -653,7 +653,7 @@
     }
    ],
    "source": [
-    "X_useful_train_set.info()\n"
+    "X_useful_train_set.info()"
    ]
   },
   {
@@ -698,7 +698,7 @@
     }
    ],
    "source": [
-    "X_ethical_test_set.info()\n"
+    "X_ethical_test_set.info()"
    ]
   },
   {
@@ -745,7 +745,7 @@
     }
    ],
    "source": [
-    "X_useful_test_set.info()\n"
+    "X_useful_test_set.info()"
    ]
   },
   {
@@ -873,7 +873,7 @@
     "        -------\n",
     "        None\n",
     "        \"\"\"\n",
-    "        pass\n"
+    "        pass"
    ]
   },
   {
@@ -892,7 +892,7 @@
     "    (\"YearsAtCompany\", \"TotalWorkingYears\"),\n",
     "    (\"YearsSinceLastPromotion\", \"TotalWorkingYears\"),\n",
     "    (\"YearsWithCurrManager\", \"TotalWorkingYears\"),\n",
-    "]\n"
+    "]"
    ]
   },
   {
@@ -910,7 +910,7 @@
     "    ('imputer', SimpleImputer(strategy=\"median\")),\n",
     "    ('attribs_adder', CombinedAttributesAdder(columns_to_merge)),\n",
     "    ('std_scaler', StandardScaler()),\n",
-    "]).set_output(transform=\"pandas\")\n"
+    "]).set_output(transform=\"pandas\")"
    ]
   },
   {
@@ -927,7 +927,7 @@
     "useful_full_pipeline = ColumnTransformer(transformers=[\n",
     "    (\"num\", num_pipeline_useful, useful_train_set_num.keys()),\n",
     "    (\"cat\", OneHotEncoder(sparse_output=False), useful_cat_attribs),\n",
-    "], remainder='passthrough').set_output(transform=\"pandas\")\n"
+    "], remainder='passthrough').set_output(transform=\"pandas\")"
    ]
   },
   {
@@ -954,7 +954,7 @@
     "ethical_full_pipeline = ColumnTransformer([\n",
     "    (\"num\", num_pipeline_ethical, ethical_train_set_num.keys()),\n",
     "    (\"cat\", OneHotEncoder(sparse_output=False), ethical_cat_attribs),\n",
-    "]).set_output(transform=\"pandas\")\n"
+    "]).set_output(transform=\"pandas\")"
    ]
   },
   {
@@ -968,7 +968,7 @@
     "    X_useful_train_set)\n",
     "# -- Ethical --\n",
     "ethical_train_set_prepared = ethical_full_pipeline.fit_transform(\n",
-    "    X_ethical_train_set)\n"
+    "    X_ethical_train_set)"
    ]
   },
   {
@@ -1898,7 +1898,7 @@
     }
    ],
    "source": [
-    "useful_train_set_prepared\n"
+    "useful_train_set_prepared"
    ]
   },
   {
@@ -2742,7 +2742,7 @@
     }
    ],
    "source": [
-    "ethical_train_set_prepared\n"
+    "ethical_train_set_prepared"
    ]
   },
   {
@@ -2760,7 +2760,7 @@
     "del useful_train_set_num\n",
     "del ethical_train_set_num\n",
     "del useful_cat_attribs\n",
-    "del ethical_cat_attribs\n"
+    "del ethical_cat_attribs"
    ]
   },
   {
@@ -2865,7 +2865,7 @@
    ],
    "source": [
     "useful_train_set_prepared, useful_useless_features = plot_feature_importances(\n",
-    "    useful_train_set_prepared, y_useful_train_set, \"Useful features importance\")\n"
+    "    useful_train_set_prepared, y_useful_train_set, \"Useful features importance\")"
    ]
   },
   {
@@ -2896,7 +2896,7 @@
     }
    ],
    "source": [
-    "useful_useless_features\n"
+    "useful_useless_features"
    ]
   },
   {
@@ -2946,7 +2946,7 @@
     }
    ],
    "source": [
-    "useful_train_set_prepared.info()"
+    "useful_train_set_prepared.info()\n"
    ]
   },
   {
@@ -2974,7 +2974,7 @@
    ],
    "source": [
     "ethical_train_set_prepared, ethical_useless_features = plot_feature_importances(\n",
-    "    ethical_train_set_prepared, y_ethical_train_set, \"Ethical features importance\")\n"
+    "    ethical_train_set_prepared, y_ethical_train_set, \"Ethical features importance\")"
    ]
   },
   {
@@ -3003,7 +3003,7 @@
     }
    ],
    "source": [
-    "ethical_useless_features\n"
+    "ethical_useless_features"
    ]
   },
   {
@@ -3052,7 +3052,7 @@
     }
    ],
    "source": [
-    "ethical_train_set_prepared.info()"
+    "ethical_train_set_prepared.info()\n"
    ]
   },
   {
@@ -3127,7 +3127,7 @@
     }
    ],
    "source": [
-    "plot_pca(ethical_train_set_prepared)\n"
+    "plot_pca(ethical_train_set_prepared)"
    ]
   },
   {
@@ -3155,7 +3155,7 @@
     }
    ],
    "source": [
-    "plot_pca(useful_train_set_prepared)\n"
+    "plot_pca(useful_train_set_prepared)"
    ]
   },
   {
@@ -3470,7 +3470,7 @@
     "useful_train_set_prepared = pd.DataFrame(pca.fit_transform(useful_train_set_prepared), columns=[\n",
     "                                         'PCA%i' % i for i in range(15)], index=useful_train_set_prepared.index)\n",
     "\n",
-    "useful_train_set_prepared\n"
+    "useful_train_set_prepared"
    ]
   },
   {
@@ -3528,7 +3528,7 @@
    ],
    "source": [
     "pd.DataFrame(pca.inverse_transform(useful_train_set_prepared),\n",
-    "             columns=useful_train_set_prepared_attr).info()\n"
+    "             columns=useful_train_set_prepared_attr).info()"
    ]
   },
   {
@@ -3616,7 +3616,7 @@
     "        pandas.DataFrame\n",
     "            Transformed dataset.\n",
     "        \"\"\"\n",
-    "        return X.drop(self.columns_to_drop, axis=1)"
+    "        return X.drop(self.columns_to_drop, axis=1)\n"
    ]
   },
   {
@@ -3629,7 +3629,7 @@
     "    ('pipeline', useful_full_pipeline),\n",
     "    ('remove_useless_features', RemoveUselessFeatures(useful_useless_features)),\n",
     "    ('pca', PCA(n_components=15)),\n",
-    "])\n"
+    "])"
    ]
   },
   {
@@ -3642,7 +3642,7 @@
     "    ('pipeline', ethical_full_pipeline),\n",
     "    ('remove_useless_features', RemoveUselessFeatures(ethical_useless_features)),\n",
     "    ('pca', PCA(n_components=15)),\n",
-    "])"
+    "])\n"
    ]
   },
   {
@@ -3650,7 +3650,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Préparation de jeux de test\n"
+    "## Préparation des jeux de test\n"
    ]
   },
   {
@@ -3660,7 +3660,7 @@
    "outputs": [],
    "source": [
     "useful_test_set_prepared = pd.DataFrame(useful_full_pipeline.fit_transform(X_useful_test_set), columns=[\n",
-    "    'PCA%i' % i for i in range(15)])"
+    "    'PCA%i' % i for i in range(15)])\n"
    ]
   },
   {
@@ -3670,7 +3670,7 @@
    "outputs": [],
    "source": [
     "ethical_test_set_prepared = pd.DataFrame(ethical_full_pipeline.fit_transform(X_ethical_test_set), columns=[\n",
-    "    'PCA%i' % i for i in range(15)])"
+    "    'PCA%i' % i for i in range(15)])\n"
    ]
   },
   {
@@ -3678,7 +3678,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sauvegarde du jeu de données\n"
+    "## Sauvegarde du jeu de données\n"
    ]
   },
   {
@@ -3725,56 +3725,6 @@
     "    pickle.dump(ethical_test_set_prepared, f)\n",
     "with open(path_ethical + \"y_ethical_test.pkl\", \"wb\") as f:\n",
     "    pickle.dump(y_ethical_test_set, f)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Extraction de caractéristiques\n",
-    "\n",
-    "Extraire les caractéristiques pertinentes des données brutes pour les utiliser dans l'apprentissage automatique.\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Sélection des modèles\n",
-    "\n",
-    "Sélectionner le modèle d'apprentissage automatique le plus approprié pour le problème spécifique que l'on cherche à résoudre.\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Entraînement du modèle\n",
-    "\n",
-    "Entraîner le modèle sélectionné sur les données d'entraînement en utilisant des algorithmes d'apprentissage automatique appropriés.\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Évaluation du modèle\n",
-    "\n",
-    "Evaluer les performances du modèle sur des données de test pour mesurer sa précision, sa fiabilité et sa robustesse.\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Mise en production du modèle\n",
-    "\n",
-    "Intégrer le modèle entraîné dans une application en temps réel pour effectuer des prédictions sur de nouvelles données.\n"
    ]
   }
  ],
