--- a/Projet/ethique.ipynb
+++ b/Projet/ethique.ipynb
@@ -451,8 +451,9 @@
     "|:-|\n",
     "|\"Over18\"|\n",
     "|\"EducationField\"|\n",
-    "|\"EmployeeCount\" = 0|\n",
-    "|*\"StockOptionLevel\"*|"
+    "|\"EmployeeCount\"|\n",
+    "|*\"StockOptionLevel\"*|\n",
+    "|*\"EmployeeID\"*|"
    ]
   },
   {
@@ -463,8 +464,9 @@
     "Non-pertinantes car elles ne sont pas utiles pour la prédiction de la démission d'un employé :\n",
     "- `Over18` : Nous avons déjà l'age de l'employé.\n",
     "- `EducationField` : Nous avons déjà l'education de l'employé.\n",
-    "- `EmployeeCount` : Tous les employés ont 0 comme valeur.\n",
-    "- `StockOptionLevel` : Non pertinente."
+    "- `EmployeeCount` : Tous les employés ont 1 comme valeur.\n",
+    "- `StockOptionLevel` : Non pertinente.\n",
+    "- `EmployeeID` : Non pertinente pour la prédiction. Utile pour lier les bases de données entre elles."
    ]
   },
   {
