--- a/Projet/algo_ml_all.ipynb
+++ b/Projet/algo_ml_all.ipynb
@@ -112,6 +112,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour déterminer la performance de cette algorithme, nous allons passer par plusieurs métriques :\n",
+    "\n",
+    "* Une validation croisée pour déterminer la précision du modèle\n",
+    "* Des scores de précision et de rappel ainsi qu'une moyenne harmonique pour déterminer le pourcentage concernant la répartition des données (Un graphique sera très utile pour appuyer le choix entre précision et rappel)\n",
+    "* Une courbe ROC ainsi que son AUC qui permet de déterminer la précision du modèle\n",
+    "\n",
+    "À noter que ces métriques seront utilisés sur les autres algorithmes à tester pour comparer les performances de ces derniers entre eux"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
@@ -343,6 +357,14 @@
     "\n",
     "# Calculate AUC\n",
     "roc_auc_score(Y_useful_train, y_scores)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dans le cas du SGDClassifier, on obtient des résultats satisfaisant mais il est sûrement possible de faire mieux avec un autre algorithme étant donné la nature de notre jeu de données."
    ]
   },
   {
