--- a/Projet/algo_ml_all.ipynb
+++ b/Projet/algo_ml_all.ipynb
@@ -561,40 +561,16 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Score de précision\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.49079754601226994"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Calculate precision\n",
-    "precision_score(Y_all_train, y_train_pred)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Score de rappel\n"
+    "# Show the precision/recall curve\n",
+    "y_scores_forest = forest_clf.predict_proba(X_all_test)[:, 1]\n",
+    "\n",
+    "precision_forest, recall_forest, thresholds_forest = precision_recall_curve(\n",
+    "    Y_all_test, y_scores_forest)"
    ]
   },
   {
@@ -605,7 +581,7 @@
     {
      "data": {
       "text/plain": [
-       "0.421792618629174"
+       "0.7601141731149729"
       ]
      },
      "execution_count": 18,
@@ -614,16 +590,8 @@
     }
    ],
    "source": [
-    "# Calculate recall\n",
-    "recall_score(Y_all_train, y_train_pred)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Moyenne harmonique (Score F1)\n"
+    "# Précision moyenne\n",
+    "precision_forest.mean()"
    ]
   },
   {
@@ -634,7 +602,7 @@
     {
      "data": {
       "text/plain": [
-       "0.45368620037807184"
+       "0.7359154929577466"
       ]
      },
      "execution_count": 19,
@@ -643,8 +611,8 @@
     }
    ],
    "source": [
-    "# Calculate F1 score\n",
-    "f1_score(Y_all_train, y_train_pred)"
+    "# Rappel moyen\n",
+    "recall_forest.mean()"
    ]
   },
   {
@@ -658,19 +626,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Show the precision/recall curve\n",
-    "y_scores_forest = forest_clf.predict_proba(X_all_test)[:, 1]\n",
-    "\n",
-    "precision_forest, recall_forest, thresholds_forest = precision_recall_curve(\n",
-    "    Y_all_test, y_scores_forest)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +804,7 @@
        "0.8125637372146934"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +833,7 @@
        "0.49079754601226994"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +862,7 @@
        "0.421792618629174"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +891,7 @@
        "0.45368620037807184"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1114,7 @@
        "{'max_depth': 20, 'n_estimators': 500}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1302,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1435,9 +1390,9 @@
      "output_type": "stream",
      "text": [
       "Time elapsed:\n",
-      "- Random Forest: 10.012 seconds\n",
-      "- Perceptron: 0.011 seconds\n",
-      "- Logistic Regression: 0.074 seconds\n"
+      "- Random Forest: 8.197 seconds\n",
+      "- Perceptron: 0.005 seconds\n",
+      "- Logistic Regression: 0.060 seconds\n"
      ]
     }
    ],
