maj: add use case

--- a/CCTL_Algo_regression.ipynb
+++ b/CCTL_Algo_regression.ipynb
@@ -55,6 +55,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Pour maximiser ou minimiser un coût, pour prédire une valeur, pour trouver une relation entre deux variables, pour trouver une tendance, pour trouver une corrélation, pour trouver une relation."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Cf [Work Shop 2](./WS2/WS_2_2_-_Pipeline_Machine_Learning.ipynb)\n"
    ]
   },
